@@ -60,6 +60,7 @@
 # 2012-09-06 PH added support for PCRE_EBCDIC_NL25
 # 2012-09-08 ChPe added PCRE32 support
 # 2012-10-23 PH added support for VALGRIND and GCOV
+# 2012-12-08 PH added patch from Daniel Richard G to quash some MSVC warnings
 
 PROJECT(PCRE C CXX)
 
@@ -570,7 +571,7 @@ SET(PCRECPP_SOURCES
 ADD_DEFINITIONS(-DHAVE_CONFIG_H)
 
 IF(MSVC)
-        ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
+        ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS)
 ENDIF(MSVC)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR 1)
